pod2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: whoami
  namespace: demo
  labels:
    name: whoami
spec:
  restartPolicy: Always
  containers:
    - name: whoami
      image: containous/whoami:v1.4.0
      ports:
        - containerPort: 80
      command:
        - /whoami
      livenessProbe:
        httpGet:
          path: /
          port: 80
        initialDelaySeconds: 3
        periodSeconds: 3
      readinessProbe:
        httpGet:
          path: /
          port: 80
        initialDelaySeconds: 3
        periodSeconds: 3
      resources:
        limits:
          cpu: 100m
          memory: 128Mi
        requests:
          memory: 64Mi
          cpu: 50m
