service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami-service
  namespace: demo
spec:
  type: ClusterIP
  selector:
    app: whoami
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
